# atri

./: Cargo.toml
atri_crypto/: Cargo.toml
core/: Cargo.toml
core/src/: client.rs  error.rs  event.rs  lib.rs
core/src/crypto/: ecdh.rs  mod.rs  packet.rs  tea.rs
core/src/data/: device.rs  packet.rs  tlv.rs
core/src/network/: connector.rs
core/src/sync/: mod.rs
executor/: Cargo.toml
executor/src/: lib.rs  runtime.rs
src/: client.rs  lib.rs
src/crypto/: ecdh.rs  tea.rs
src/data/: device.rs  mod.rs  protocol.rs  tlv.rs
src/executor/: runtime.rs
src/net/: connector.rs
src/proto/message/: mod.rs
src/sync/: mod.rs
stream/: Cargo.toml
stream/src/: lib.rs
tests/: Cargo.toml  runtime.rs
tests/src/: lib.rs
