[package]
name = "atri_core"
version = "0.1.0"
edition = "2021"

[features]
tokio = ["tokio/rt"]
async-std = ["async-std/async-global-executor"]
blocking = ["futures/executor"]
thread-pool = ["futures/thread-pool"]
net-tokio = ["tokio/net"]
net-async-std = ["async-std/default"]
net-std = []

[dependencies]
bytes = "1"
dashmap = "5"
futures = "0"
rand = "0"

[dependencies.tokio]
version = "1"
optional = true
default-features = false

[dependencies.async-std]
version = "1"
optional = true
default-features = false

[dependencies.smol]
version = "1"
optional = true

[dependencies.prost]
version = "0"

# crypto
[dependencies.p256]
version = "0.11"
features = ["ecdh"]

# end crypto

[dependencies.parking_lot]
version = "0"
optional = true

[dev-dependencies.atri_core]
path = "."
features = ["smol", "tokio", "net-tokio", "blocking", "net-std"]

[dev-dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "net"]