[package]
name = "atri_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio = ["atri_executor/tokio"]
async-std = ["atri_executor/async-std"]
blocking = ["atri_executor/blocking"]
thread-pool = ["atri_executor/thread-pool"]
net-tokio = ["tokio/net"]
io-std = []

[dependencies]
dashmap = "5"
futures = "0"

[dependencies.tokio]
version = "1"

[dependencies.atri_executor]
path = "../executor"

[dev-dependencies.atri_executor]
path = "../executor"
features = ["blocking"]