[package]
name = "atri_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio = ["atri_executor/tokio"]
async-std = ["atri_executor/async-std"]
blocking = ["atri_executor/blocking"]
thread-pool = ["atri_executor/thread-pool"]
net-tokio = ["tokio/net"]
net-async-std = ["async-std/default"]
net-std = []

[dependencies]
bytes = "1"
dashmap = "5"
futures = "0"
rand = "0"

[dependencies.tokio]
version = "1"
optional = true
default-features = false

[dependencies.async-std]
version = "1"
optional = true
default-features = false

[dependencies.smol]
version = "1"
optional = true

[dependencies.prost]
version = "0"

# crypto
[dependencies.p256]
version = "0.11"
features = ["ecdh"]

# end crypto

[dependencies.parking_lot]
version = "0"
optional = true

[dependencies.atri_executor]
path = "../executor"