[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1"
tokio = { version = "1", features = ["io-std", "rt-multi-thread"] }

[dependencies.atri_core]
path = "../core"
features = ["net-tokio", "blocking", "net-std", "smol"]